--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         }
     ],
     "require": {
-        "php": ">=8.0"
+        "php": ">=8.0",
+        "laravel/framework": ">=5.0"
     },
     "extra": {
         "laravel": {
