--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,13 @@
 {
     "name": "simplecms/region",
-    "description": "中国地理",
+    "description": "SimpleCMS/Laravel Region Component / 中国行政地理划分组件",
     "keywords": [
         "laravel",
         "region",
+        "中国行政地理划分组件",
         "simplecms"
     ],
-    "version": "1.0.5",
+    "version": "1.0.6",
     "license": "MIT",
     "autoload": {
         "psr-4": {
@@ -21,7 +22,16 @@
     ],
     "require": {
         "php": ">=8.0",
-        "laravel/framework": ">=5.0"
+        "laravel/framework": ">=9.0",
+        "ext-mysqli": ">=5.7"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5.8"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "SimpleCMS\\Region\\Tests\\": "tests"
+        }
     },
     "extra": {
         "laravel": {
