--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "ext-mysqli": ">=5.7"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5.8"
+        "phpunit/phpunit": "^9.5.8",
+        "simplecms/framework": "^1.0"
     },
     "autoload-dev": {
         "psr-4": {
