--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
     ],
     "require": {
         "php": ">=8.2",
-        "laravel/framework": ">=9.0",
-        "ext-mysqli": ">=5.7"
+        "laravel/framework": ">=11.0",
+        "ext-mysqli": ">=8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5.8",
@@ -33,6 +33,9 @@
         "psr-4": {
             "SimpleCMS\\Region\\Tests\\": "tests"
         }
+    },
+    "suggest": {
+        "simplecms/framework": "Required to use service."
     },
     "extra": {
         "laravel": {
