--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,8 @@
         }
     ],
     "require": {
-        "php": ">=8.2",
-        "laravel/framework": ">=11.0",
-        "ext-mysqli": ">=8.0"
+        "php": "^8.2",
+        "laravel/framework": "^11.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5.8",
