--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "中国行政地理划分组件",
         "simplecms"
     ],
-    "version": "1.0.8",
+    "version": "1.1.0",
     "license": "MIT",
     "autoload": {
         "psr-4": {
@@ -26,7 +26,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5.8",
-        "simplecms/framework": "^1.0.23"
+        "simplecms/framework": ">=1.0"
     },
     "autoload-dev": {
         "psr-4": {
